complete basic functions

--- a/src/main/resources/simian-report.properties
+++ b/src/main/resources/simian-report.properties
@@ -1,4 +1,13 @@
 #Dashboard
-report.dashboard.title.name=Simian
-report.dashboard.title.description=Result of simian
-report.dashboard.url.plugin=http://code.google.com/p/l10n-maven-plugin/
+report.dashboard.title.name = Simian
+report.dashboard.title.description = Result of simian
+report.dashboard.url.plugin = http://code.google.com/p/l10n-maven-plugin/
+
+report.title = Simian Report
+report.introduction = The following document contains the results of a simian analysis.
+report.summary.title = Summary
+
+report.summary.configuration.title = Configuration
+report.summary.result.title = Result
+
+report.detail.title = Details
