--- a/pom.xml
+++ b/pom.xml
@@ -3,49 +3,44 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.jiangxin.mvn.plugin</groupId>
-    <artifactId>maven-simian-new-plugin</artifactId>
+    <artifactId>simian-maven-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
-    <name>maven-simian-new-plugin Maven Plugin</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://maven.apache.org</url>
+    <name>Simian Maven Plugin</name>
+    <url>https://github.com/jiangxincode/simian-maven-plugin</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mavenVersion>2.2.1</mavenVersion>
-        <jdependVersion>2.9.1</jdependVersion>
-        <mojo.java.target>1.8</mojo.java.target>
-        <scmpublish.content>target/staging/${project.artifactId}</scmpublish.content>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.5</version>
+            <version>3.5.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>${mavenVersion}</version>
+            <version>3.5.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.reporting</groupId>
             <artifactId>maven-reporting-api</artifactId>
-            <version>${mavenVersion}</version>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.reporting</groupId>
             <artifactId>maven-reporting-impl</artifactId>
-            <version>2.3</version>
+            <version>3.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-utils</artifactId>
-            <version>3.0.20</version>
-        </dependency>
+        <!-- <dependency> <groupId>org.codehaus.plexus</groupId> <artifactId>plexus-utils</artifactId> 
+            <version>3.1.0</version> </dependency> <dependency> <groupId>redhill</groupId> 
+            <artifactId>simian</artifactId> <version>2.2.4</version> </dependency> -->
         <dependency>
             <groupId>redhill</groupId>
             <artifactId>simian</artifactId>
-            <version>2.2.4</version>
+            <version>2.5.10</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/simian-2.5.10.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>commons-jelly</groupId>
@@ -77,18 +72,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-        <dependency>
-            <groupId>ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.6.5</version>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -97,7 +87,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.5.2</version>
                 <executions>
                     <execution>
                         <id>mojo-descriptor</id>
@@ -110,15 +100,49 @@
                         <goals>
                             <goal>helpmojo</goal>
                         </goals>
-                        <configuration>
-                            <goalPrefix>maven-simian-new-plugin</goalPrefix>
-                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+                <configuration>
+                    <locales>en_US</locales>
+                    <outputDirectory>${project.build.directory}/site</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>edu.jiangxin.mvn.plugin</groupId>
+                <artifactId>simian-maven-plugin</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jdepend-maven-plugin</artifactId>
+                <version>2.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
