--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,37 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>edu.jiangxin.mvn.plugin</groupId>
+    <groupId>com.github.jiangxincode</groupId>
     <artifactId>simian-maven-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.2</version>
     <packaging>maven-plugin</packaging>
     <name>Simian Maven Plugin</name>
     <url>https://github.com/jiangxincode/simian-maven-plugin</url>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <tag>master</tag>
+        <url>git@github.com:jiangxincode/simian-maven-plugin.git</url>
+        <connection>scm:git:git@github.com:jiangxincode/simian-maven-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jiangxincode/simian-maven-plugin.git</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>Aloys</name>
+            <email>jiangxinnju@163.com</email>
+            <organization></organization>
+        </developer>
+    </developers>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -109,9 +134,12 @@
                 <version>2.5</version>
             </plugin>
             <plugin>
-                <groupId>edu.jiangxin.mvn.plugin</groupId>
+                <groupId>com.github.jiangxincode</groupId>
                 <artifactId>simian-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>0.0.2</version>
+                <configuration>
+                    <threshold>3</threshold>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
