--- a/src/main/resources/simian-report.properties
+++ b/src/main/resources/simian-report.properties
@@ -4,7 +4,8 @@ report.dashboard.title.description = Result of simian
 report.dashboard.url.plugin = http://code.google.com/p/l10n-maven-plugin/
 
 report.title = Simian Report
-report.introduction = The following document contains the results of a simian analysis.
+report.introduction = The following document contains the results of
+report.introduction.version = Simian Version is \: {0}
 report.summary.title = Summary
 
 report.summary.configuration.title = Configuration
